# Django-React

./: .env.example  Makefile  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/backend/: urls.py
backend/backend/settings/: __init__.py  django.py  drf.py
backend/core/: factories.py  utils.py
backend/core/management/commands/: create_super_user.py
backend/distribution/: admin.py  factories.py  models.py  tests.py
backend/distribution/admin_classes/: __init__.py  distribution.py
backend/distribution/api/v1/: serializers.py  urls.py  views.py
backend/distribution/migrations/: 0001_initial.py
backend/log/: admin.py  models.py
backend/log/admin_classes/: __init__.py  message_log.py
backend/log/migrations/: 0001_initial.py
backend/log/services/: commands.py
devops/postgres/: Dockerfile
frontend/: Dockerfile  package.json
frontend/src/: App.tsx
frontend/src/components/Distribution/: Distribution.tsx  index.ts
frontend/src/components/DistrubutionStatistic/: DistrubutionStatistic.tsx  index.ts
